# e3-django-dynamic-forms

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
src/e3_dynamic_forms/: admin.py  apps.py  conf.py  defaults.py  models.py  permissions.py  urls.py
src/e3_dynamic_forms/api/: serializers.py  urls.py  views.py
src/e3_dynamic_forms/forms/: schema_form.py
src/e3_dynamic_forms/migrations/: 0001_initial.py  0002_make_formschema_swappable.py  0003_make_formresponse_swappable.py
src/e3_dynamic_forms/services/: __init__.py  response_processor.py  state_backend.py
src/e3_dynamic_forms/static/e3_dynamic_forms/css/: schema_form.css
src/e3_dynamic_forms/static/e3_dynamic_forms/js/: geolocation_schema_form.js  schema_form.js
src/e3_dynamic_forms/templates/e3_dynamic_forms/: _pagination.html  base.html  response_create.html  response_detail.html  response_list.html  schema_create.html  schema_delete.html  schema_detail.html  schema_edit.html  schema_list.html
src/e3_dynamic_forms/templates/e3_dynamic_forms/widgets/: geolocation_button.html
src/e3_dynamic_forms/utils/: json_form_parser.py  response_validator.py  schema_validator.py
src/e3_dynamic_forms/views/web/: response_views.py  schema_views.py
tests/: conftest.py  test_api.py  test_json_form_parser.py  test_models.py  test_response_validator.py  test_schema_validator.py  test_services.py  test_views.py
tests/test_app/: models.py  settings.py  urls.py
tests/test_app/templates/: base.html
